Testing of bulk delete rejection on older hadoop versions
This is done with a new class in iceberg-spark 3.5